tests/negative/import_dup_symbol.far
import fixtures.exp_a { alpha }
import fixtures.exp_b { visible as alpha }

fun main() -> i64 { return alpha() }
